--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1"
