--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "draft-js": "^0.11.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
